# data-engineering-demo

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.githooks/: pre-commit
cluster/: kind-config.yaml
docker/airflow/: Dockerfile
docker/airflow/dags/: medallion_pipeline.py
docker/iceberg-rest/: Dockerfile
docker/loadgen/: Dockerfile  generate_load.py  requirements.txt
docker/metabase/: Dockerfile
docker/spark/: Dockerfile  entrypoint.sh  pyiceberg.yaml  spark-defaults.conf
docker/spark/pipeline/: 00_create_tables.py  10_postgres_to_bronze.py  20_s3_to_bronze.py  30_bronze_to_silver.py  (+2 more)
docs/: README.md  airflow-design.md  architecture.md  configuration.md  docker-images.md  getting-started.md  iceberg-concepts.md  kubernetes-resources.md  medallion.md  operations.md  overview.md  pipeline.md  production.md  pyiceberg-usage.md  s3-access-paths.md  serving.md  spark-basics.md  troubleshooting.md
docs/plans/: gold-analytics-plan.md  serving-layer.md
k8s/: 00-namespace.yaml  10-seaweedfs.yaml  20-bucket-init.yaml  30-iceberg-rest.yaml  40-spark-iceberg.yaml  50-postgres.yaml  60-loadgen.yaml  70-trino.yaml  80-metabase.yaml  85-airflow.yaml  90-pipeline-cron.yaml
notebooks/: 00-getting-started.ipynb  01-create-tables.ipynb  02-ingest-bronze.ipynb  03-bronze-to-silver.ipynb  04-gold-analytics.ipynb  05-query-with-trino.ipynb
scripts/: build-image.sh  check.sh  defaults.env  deploy-airflow.sh  deploy-serving.sh  deploy.sh  down.sh  lib.sh  pipeline.sh  run-loadgen.sh  smoke-test.sh  status.sh  up.sh
(+1 files in other folders)
