[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "data-engineering-demo"
version = "0.1.0"
description = "Iceberg lakehouse learning lab on kind"
requires-python = ">=3.11"
dependencies = [
    "pyspark==3.5.8",
    "pyiceberg[pyarrow,duckdb,pandas]==0.11.1",
    "pandas==2.3.3",
    "prettytable==3.18.0",
    "matplotlib==3.11.0",
    "jupyterlab==4.6.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pre-commit>=3.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
